# Tutorial_Gtest

./: README.md
01_UT_class/: .clang-format  main.cpp  test
02_UT_class/: GTestExample  Readme.md  main.cpp  test
03_UT_class/: main.cpp
04_UT_class/: a.out  main.cpp
05_UT_class/: a.out  main.cpp
06_UT_class/: a.out  main.cpp
07_UT_class/: a.out  main.cpp
08_UT_class/: a.out  main.cpp
09_UT_class/: a.out  main.cpp
100_ATM_Machine_Mocking_Intrface_Virtual_Fn/: AtmMachine.h  BankServer.h  BankServerConcrete.h  Readme.md  gtestout  main.cpp
102_GPS_From_Cmd_line/: Client.cpp  Client.h  ClientTest.cc  IGPS.h  Mock_IGPS.h  Readme.txt  a.out
102_GPS_Virtual_function_Imp/: Client.h  IGPS.cpp  Readme.txt  a.out  main.cpp
102_GPS_Virtual_function_Imp_GTEST/: Client.cpp  ClientTest.cc  Mock_IGPS.h  Readme.txt  a.out  main  main.cpp
103_GPS_Virtual_function_Imp_header_GTEST_/: Client.cpp  Client.h  ClientTest.cc  a.out  header.cpp  main  main.cpp
103_GPS_Virtual_function_Imp_header_GTEST_M1/: Client.cpp  Client.h  ClientTest.cc  IGPS.cpp  IGPS.h  Readme.txt  a.out  header.h  main  main.cpp
103_GPS_Virtual_function_Imp_header_GTEST_M3/: Client.cpp  Client.h  ClientTest.cc  Readme.txt  a.out  header.cpp  header.h  main  main.cpp
104_Mock_Tmpl/: DriveAlert_client.cpp  DriveAlert_client.h  IGPS.h  Readme.txt  Speed_header.h  drive_alert
104_Mock_Tmpl_v1/: DriveAlert_client.cpp  IGPS.h  Mock_DriveAlert_client.h  Mock_DriveAlert_client_mirror.h  Speed_header.cpp  Speed_header.h  Speed_headerTest.cc  a.out
104_Mock_Tmpl_v2/: IGPS.cpp  Readme.txt  Speed_header.cpp  Speed_header.h  Speed_headerTest.cc  a.out  main.cpp
10_UT_class/: a.out  gtestout  headertest.cpp  main.cpp
11_UT_class/: a.out  gtestout  header.cpp  header.h  headertest.cpp  main.cpp
12_UT_class/: .clang-format  a.out  gtestout  header.cpp  headertest.cpp  main.cpp
Complete_Gtest_CMake_Code_Coverage/: CMakeLists.txt
Mocktesting/: CMakeLists.txt
Mocktesting/gtestsuit/tests_gtest/: CMakeLists.txt  MockAddInterfaceTest.cc  MockIAddInterface.h
Mocktesting/src/: main.cpp
practise/: gtestout  header.h  (+2 more)
(+16 files in other folders)
